# soda-transcriptions

./: .gitignore  README.md
client/: .env.production  index.html  package.json
client/src/: App.css  App.tsx  index.css
mac/Soda Transcriptions.app/Contents/: Info.plist
mac/Soda Transcriptions.app/Contents/MacOS/: soda-transcriptions
server/: .env.example  config.py  main.py  pyproject.toml  transcribe.py
