[tool.poetry]
name = "soda-transcriptions-server"
version = "0.1.0"
description = "Local API for audio/video transcription via OpenAI Whisper"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
fastapi = ">=0.104.1"
uvicorn = { extras = ["standard"], version = ">=0.35" }
python-multipart = ">=0.0.6"
openai = ">=1.12.0"
python-dotenv = ">=1.0.0"
pydantic-settings = ">=2.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
